--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -233,4 +233,11 @@
     <string name="sign_in_screen_term_and_condition_2">Syarat &amp; Ketentuan kebijakan aplikasi</string>
     <!-- end sign in screen  -->
 
+    <!--  [NEW] forgot password screen  -->
+    <string name="reset_password_screen_reset_password">Reset Password</string>
+    <string name="reset_password_screen_hint">Masukkan alamat email yang terdaftar dan kami akan mengirimkan email berisi kode OTP untuk mengatur ulang Password</string>
+    <string name="reset_password_screen_email">Email</string>
+    <string name="reset_password_screen_email_text_field_label">Contoh : jenny11@gmail.com</string>
+    <string name="reset_password_screen_next">Selanjutnya</string>
+    <!-- end forgot password screen  -->
 </resources>
