--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -262,7 +262,7 @@
     <!--  [NEW] otp sign in screen  -->
     <string name="otp_sign_in_screen_reset_title">Masukkan Kode OTP</string>
     <string name="otp_sign_in_screen_reset_instruction">Silakan periksa kotak masuk dan spam pada email %s, masukkan kode OTP  untuk buat password baru</string>
-    <string name="otp_sign_in_screen_reset_confirmation_time">Waktu konfirmasi</string>
+    <string name="otp_sign_in_screen_reset_confirmation_time">Waktu konfirmasi\u0020</string>
     <string name="otp_sign_in_screen_reset_next_button_text">Selanjutnya</string>
     <!-- end forgot password screen  -->
 </resources>
