--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -258,4 +258,13 @@
     <string name="reset_password_screen_email_text_field_label">Contoh : jenny11@gmail.com</string>
     <string name="reset_password_screen_next">Selanjutnya</string>
     <!-- end forgot password screen  -->
+
+    <!--  [NEW] input new password screen  -->
+    <string name="input_password_screen_reset_password">Buat Password Baru</string>
+    <string name="input_password_screen_hint">Silakan buat password baru untuk melanjutkan akses ke akun Anda.</string>
+    <string name="input_password_screen_password">Password</string>
+    <string name="input_password_screen_Passrowd_konfirm">Konfirmasi Password</string>
+    <string name="input_password_screen_email_text_field_label">Masukan Password </string>
+    <string name="input_password_screen_next">Simpan</string>
+    <!-- end input new password screen  -->
 </resources>
