--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -258,4 +258,12 @@
     <string name="reset_password_screen_email_text_field_label">Contoh : jenny11@gmail.com</string>
     <string name="reset_password_screen_next">Selanjutnya</string>
     <!-- end forgot password screen  -->
+
+    <!--  [NEW] edit profile screen  -->
+    <string name="edit_profile_screen">Yuk, satu langkah lagi</string>
+    <string name="edit_profile_screen_hint">Tambahkan foto profil dan username diaplikasi Uwang.</string>
+    <string name="edit_profile_screen_placeholder">Username</string>
+    <string name="edit_profile_screen_field_label">Contoh : Jenny</string>
+    <string name="edit_profile_screen_next">Simpan</string>
+    <!--  [NEW] edit profile screen  -->
 </resources>
