--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -258,4 +258,11 @@
     <string name="reset_password_screen_email_text_field_label">Contoh : jenny11@gmail.com</string>
     <string name="reset_password_screen_next">Selanjutnya</string>
     <!-- end forgot password screen  -->
+    <!--  [NEW] forgot password screen  -->
+    <string name="send_otp">Masukkan Kode OTP</string>
+    <string name="send_otp_p1">Silakan periksa kotak masuk dan spam pada email</string>
+    <string name="send_otp_p2">""</string>
+    <string name="send_otp_p3"> masukkan kode OTP untuk buat password baru</string>
+    <string name="send_otp_screen_next">Selanjutnya</string>
+    <!-- end forgot password screen  -->
 </resources>
