--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -218,6 +218,8 @@
 
     <!--  [NEW] sign in screen  -->
     <string name="sign_in_screen_welcome">Selamat datang</string>
+    <string name="onboard_screen_login">Sumber belajar</string>
+    <string name="onboard_screen_login_title">Baca artikel dan ikuti berita terkini seputar keuangan untuk tetap terinformasi.</string>
     <string name="sign_in_screen_description">Masukkan alamat email dan password Anda untuk melakukan login</string>
     <string name="sign_in_screen_email_text_field_title">Email</string>
     <string name="sign_in_screen_email_text_field_label">Contoh  : fadelptr09@gmail.com</string>
@@ -225,6 +227,7 @@
     <string name="sign_in_screen_password_text_field_label">Masukkan password Anda</string>
     <string name="sign_in_screen_forgot_password">Lupa Password</string>
     <string name="sign_in_screen_sign_in_button_text">Masuk</string>
+    <string name="sign_in_screen_login_email_button_text">Masuk dengan alamat Email</string>
     <string name="sign_in_screen_or">Atau</string>
     <string name="sign_in_screen_sign_in_google_button_text">Masuk dengan Google</string>
     <string name="sign_in_screen_not_have_an_account">Belum memiliki akun sebelumnya?\u0020</string>
