--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -286,12 +286,18 @@
     <string name="otp_sign_in_screen_reset_next_button_text">Selanjutnya</string>
     <!-- end forgot password screen  -->
 
-    <!--  [NEW] input dob screen screen  -->
+    <!--  [NEW] input dob screen  -->
     <string name="input_odb_screen_title">Lengkapi data diri</string>
     <string name="input_odb_screen_instruction">Isi tanggal lahir Anda untuk membantu kami memberikan rekomendasi dan saran yang lebih sesuai dengan situasi keuangan Anda.</string>
     <string name="input_odb_screen_dob_text_field_title">Lengkapi data diri</string>
     <string name="input_odb_screen_dob_text_field_text">Contoh : 11 Desember 2001</string>
     <string name="input_odb_screen_dob_next_button_text">Selanjutnya</string>
-    <!-- end input dob screen screen  -->
+    <!-- end input dob screen  -->
+
+    <!--  [NEW] set preference screen  -->
+    <string name="set_preference_screen_title">Preferensi Keuangan</string>
+    <string name="set_preference_screen_instruction">Pilih minimal 3 topik keuangan yang ingin Anda jelajahi untuk memulai perjalanan keuangan Anda:</string>
+    <string name="set_preference_screen_next_button_text">Selanjutnya</string>
+    <!-- end set preference screen  -->
 
 </resources>
