--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -106,8 +106,8 @@
     <string name="description_icon_success">Ikon sukses</string>
     <!--    end alert component-->
     <!--    complete profile  -->
-    <string name="text_title_success_profile">Yeay, Profil berhasil dibuat</string>
-    <string name="text_subtitle_success_profile">Silakan masuk ke akunmu dan nikmati pengalamanmu dalam aplikasi Uwang</string>
+    <string name="text_title_success_profile">Selamat, Profil berhasil dibuat!</string>
+    <string name="text_subtitle_success_profile">Silakan masuk ke akun Anda dan nikmati pengalaman perjalanan keuangan Anda dengan aplikasi Uwang</string>
     <string name="text_btn_success_profile">Beranda</string>
     <!--   end complete profile  -->
     <!--    favorite task component-->
