feat: create ChooseTopicScreen

--- a/core/core-component/src/main/res/values/strings.xml
+++ b/core/core-component/src/main/res/values/strings.xml
@@ -333,13 +333,38 @@
     <string name="label_teks_button_upload">Upload</string>
     <string name="description_header_photo_profile">Upload foto selfie favorit kamu.</string>
     <string name="title_header_photo_profile">Pilih foto profil</string>
-    <string name="title_header_topic">Apa tingkatan peranmu saat ini?</string>
-    <string name="description_header_topic">Pilih satu yang menggambarkan dirimu</string>
+    <string name="title_header_level">Apa tingkatan peranmu saat ini?</string>
+    <string name="description_header_level">Pilih satu yang menggambarkan dirimu</string>
     <string name="title_card_beginner">Pemula</string>
     <string name="description_card_beginner">Seseorang yang mengetahui konsep dasar keuangan seperti pengeluaran, pendapatan, anggaran, dan tabungan.</string>
     <string name="title_card_intermediate">Menengah</string>
     <string name="description_card_Intermediate">Seseorang yang memahami topik manajemen resiko, portofolio investasi dan pemahaman mendalam mengenai saham dan obligasi.</string>
     <string name="title_card_expert">Ahli</string>
     <string name="description_card_expert">Seseorang yang memiliki pemahaman mendalam mengenai analisis keuangan, strategi investasi, dan manajemen keuangan bisnis.</string>
+    <string name="title_header_topic">Pilih 3 topik keuangan</string>
+    <string name="description_header_topic">Topik ini sebagai referensi belajar yang diminati</string>
+    <string name="placeholder_count_topic">Dipilih: %s</string>
+    <string name="label_text_button_reset">Reset</string>
+    <string name="label_tag_topic_satu">📑 Manajemen anggaran</string>
+    <string name="label_tag_topic_dua">📈 Investasi</string>
+    <string name="label_tag_topic_tiga">🖥️ Teknologi Keuangan</string>
+    <string name="label_tag_topic_empat">🚀 Kewirausahaan</string>
+    <string name="label_tag_topic_lima">💼Sampingan </string>
+    <string name="label_tag_topic_enam">📑Pajak </string>
+    <string name="label_tag_topic_tujuh">💵Pendanaan </string>
+    <string name="label_tag_topic_delapan"> 🤝 Crowdfunding </string>
+    <string name="label_tag_topic_sembilan"> 📜 Harta waris</string>
+    <string name="label_tag_topic_sepuluh"> 📚Edukasi anak</string>
+    <string name="label_tag_topic_sebelas"> 📊 Kredit skor</string>
+    <string name="label_tag_topic_duabelas">🏢 Bisnis UMKM</string>
+    <string name="label_tag_topic_tigabelas"> 👨‍👩‍👧‍👦 Keuangan keluarga</string>
+    <string name="label_tag_topic_empatbelas">🗓️ Perencanaan pensiun</string>
+    <string name="label_tag_topic_limabelas">🗓️ Pensiun dini</string>
+    <string name="label_tag_topic_enambelas"> 📚 Pendidikan keuangan</string>
+    <string name="label_tag_topic_tujuhbelas"> 🏦 Menabung</string>
+    <string name="label_tag_topic_delapanbelas"> ⚠️ Pengelolaan resiko</string>
+    <string name="label_tag_topic_sembilanbelas"> 💼 Pengembangan pendapatan</string>
+    <string name="label_tag_topic_duapuluh"> 📜 Obligasi</string>
+    <string name="label_tag_topic_duapuluhsatu"> 📊 Reksa dana</string>
 
 </resources>
